# Diablo-FSW

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  FSW_README.md  QUICK_START.md  README.md  build.sh  format.sh  migrate_to_diablo.sh  quick_start.sh  start_complete_system.sh  startup.sh  test_system.sh
.github/workflows/: ci.yml
FSW/calibration/include/: EncoderCalibration.hpp  EnvironmentalRobustCalibration.hpp  PTCalibrationChangeDetection.hpp  PTCalibrationFramework.hpp  PTCalibrationTool.hpp  SensorCalibration.hpp  SmartCalibrationSystem.hpp
FSW/calibration/src/: EnvironmentalRobustCalibration.cpp  PTCalibrationFramework.cpp  PTCalibrationMonitor.cpp  PTCalibrationTool.cpp  SmartCalibrationSystem.cpp
FSW/comms/include/: CommunicationProtocol.hpp  ESP32ConfigParser.hpp  ESP32SerialHandler.hpp  PacketProtocol.hpp
FSW/comms/src/: ESP32ConfigParser.cpp  ESP32SerialHandler.cpp
FSW/control/include/: EngineControl.hpp  GainScheduling.hpp  OptimalController.hpp  ValveController.hpp
FSW/control/src/: EngineControl.cpp
FSW/nav/include/: EKFNavigation.hpp  ObservationMatrix.hpp  PTObservationMatrix.hpp  SensorFusion.hpp
FSW/nav/src/: ObservationMatrix.cpp  PTObservationMatrixBuilder.cpp
FSW/src/: complete_calibration_pipeline.cpp  configurable_pt_example.cpp  esp32_integration_example.cpp  main.cpp  paper_algorithm_pipeline.cpp  pt_calibration_example.cpp  pt_integration_example.cpp  raw_voltage_pt_example.cpp
FSW/state/include/: StateMachine.hpp
comms/include/: BarometerMessage.hpp  CalibrationMessage.hpp  EncoderMessage.hpp  EngineControlMessage.hpp  FlowMeterMessage.hpp  GPSMessage.hpp  IMUMessage.hpp  LoadCellMessage.hpp  NavigationMessage.hpp  PTMessage.hpp  RTDMessage.hpp  SystemHealthMessage.hpp  TCMessage.hpp  Timer.hpp  ValveControlMessage.hpp
config/: config_base.toml  config_engine.toml  config_jetson.toml  esp32_config.toml  generate_configs.py
docs/: CALIBRATION_PIPELINE_GUIDE.md  DEVELOPMENT.md  ESP32_ARDUINO_TEMPLATE.ino  ESP32_INTEGRATION_GUIDE.md  MESSAGE_TYPES_SUMMARY.md  MIGRATION_TO_DIABLO.md  PAPER_ALGORITHM_GUIDE.md  PT_CALIBRATION_GUIDE.md  PressureTransducerCalibrationFramework.tex  QUICK_START.md
groundstation/config/: config_groundstation.toml
groundstation/scripts/: sensor_data_viewer.py  start_groundstation.sh  start_groundstation_db.sh
scripts/: fake_sensor_generator  fake_sensor_generator.cpp  fake_sensor_generator_remote  fake_sensor_generator_remote.cpp  smart_calibration_gui.py  view_sensor_data.py
shell/: last_run.txt  migrate_to_diablo.sh  quick_start.sh  start_complete_system.sh  startup_db.sh  tmux_start_jetson_sensors.sh  tmux_start_sensors.sh
utl/: Elodin.hpp  TCPSocket.hpp  db.hpp  dbConfig.hpp
